--- a/src/main/resources/templates/createTrip.html
+++ b/src/main/resources/templates/createTrip.html
@@ -16,39 +16,42 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<form autocomplete="off" action="#" th:action="@{'/trips/createTrips/' + ${id}}" th:object="${theTrip}"
-												method="post" class="form-horizontal" role="form">
-												<h3 class="form-signin-heading" th:text="CreateTrip"></h3>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                                            <ul class="navbar-nav mr-auto">
+                                                                            <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                                                                            <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                                            </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container marketing">
+        <form autocomplete="off" action="#" th:action="@{'/trips/createTrips/' + ${id}}" th:object="${theTrip}"
+            method="post" class="form-horizontal" role="form">
+            <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Create Trip</h1>
 
-												<input id="numberPlacesDispo" type="number" th:field="*{numberPlaces}" placeholder="Number Places in the car..."
-																class="form-control" required="required" step="1" onchange="verifier();"/> <br /> <br /> <input type="date"
-																th:field="*{dateDepart}" placeholder="Date de Depart..." class="form-control" required="required"
-																maxlength="32" /> <br /> <br /> Choissisez vos enfants qui participent à ce trajet:<SELECT multiple
-																th:field="*{childs}" name="gr" id="childs" onchange="verifier();">
-																<OPTION th:each="child : ${childs}" th:value="${child.id}" th:inline="text">[[${child.name}]]</OPTION>
-												</SELECT><br /> <br />
+            <input id="numberPlacesDispo" type="number" th:field="*{numberPlaces}" placeholder="Number Places in the car..."
+                                            class="form-control" required="required" step="1" onchange="verifier();" style="max-width: 500px; margin: auto;"/> <br /> <br />
+            <input type="date"th:field="*{dateDepart}" placeholder="Date de Depart..." class="form-control" required="required"
+                                            maxlength="32" style="max-width: 500px; margin: auto;"/><br />
+            <br />
+            <div style="max-width: 500px; margin: auto;">
+                Choissisez vos enfants qui participent à ce trajet:<SELECT multiple class="form-control" multiple
+                                            th:field="*{childs}" name="gr" id="childs" onchange="verifier();">
+                                            <OPTION th:each="child : ${childs}" th:value="${child.id}" th:inline="text">[[${child.name}]]</OPTION>
+            </SELECT><br /> <br />
+            </div>
 
-												<button id="boutton" class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Create Trip</button>
-												<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
-								</form>
-
-				</div>
+            <button id="boutton" class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit" style="max-width: 250px; margin: auto;">Create Trip</button>
+            <span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
+        </form>
+    </div>
 
 
 </body>
