--- a/src/main/resources/templates/excursion.html
+++ b/src/main/resources/templates/excursion.html
@@ -14,52 +14,50 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<table id="search" class="table table-hover">
-
-												<thead>
-
-																<tr>
-																				<th>Name</th>
-																				<th>Days</th>
-																				<th>Groups</th>
-
-																</tr>
-												</thead>
-												<tbody>
-																<tr th:each="excursion : ${listExcursion}" id="tabCount" th:inline="text">
-																				<td th:text="${excursion.name}"></td>
-																				<td th:text="${excursion.days}"></td>
-																				<td><SELECT>
-																												<OPTION th:each="group : ${excursion.groups}" th:value="${group}" th:inline="text">[[${group}]]</OPTION>
-																				</SELECT></td>
-																				<td><a type="button" class="btn btn-success" th:href="@{'/trips/' + ${excursion.id}}">Voir
-																												Trajet</a></td>
-																</tr>
-												</tbody>
-								</table>
-								<p th:if="${userRole} == 'ADMIN'" align="center">
-												<a type="button" class="btn btn-success" th:href="@{/excursions/createExcursions}">Create Excursion</a>
-								</p>
-
-
-				</div>
-
-
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                                            <ul class="navbar-nav mr-auto">
+                                                                            <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                                                                            <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                                            </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container marketing">
+        <h1  style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Existings Excursions</h1>
+        <div class="table-responsive">
+            <table id="search" class="table table-hover table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Days</th>
+                        <th>Groups</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="excursion : ${listExcursion}" id="tabCount" th:inline="text">
+                        <td th:text="${excursion.name}"></td>
+                        <td th:text="${excursion.days}"></td>
+                        <td><SELECT class="form-control">
+                                <OPTION th:each="group : ${excursion.groups}" th:value="${group}" th:inline="text">[[${group}]]</OPTION>
+                            </SELECT>
+                        </td>
+                        <td>
+                            <a type="button" class="btn btn-success" th:href="@{'/trips/' + ${excursion.id}}">Voir Trajet</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <p th:if="${userRole} == 'ADMIN'" align="center">
+            <a type="button" class="btn btn-success" th:href="@{/excursions/createExcursions}">Create Excursion</a>
+        </p>
+    </div>
 </body>
 </html>
