--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,13 @@
 
      <!-- Bootstrap core CSS -->
     <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
+   
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.0/examples/carousel/carousel.css" rel="stylesheet">
-  </head>
+    
+    <!-- Custom CSS -->
+    <link href="./css/custom.css" rel="stylesheet">
+ </head>
   <body>
 
     <header>
@@ -51,17 +54,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide"  >
+            <img class="first-slide" src="./images/wallpaper_main.jpg" style="width: 100%; height: auto;">
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>Create an account</h1>
-                <p>To see some graph or anything.</p>
+                <p>Don't forget to register!</p>
                 <p><a class="btn btn-lg btn-primary" href="/registration" role="button">Sign up today</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" >
+            <img class="second-slide" src="./images/montagne.jpg" style="width: 100%; height: auto;">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Description about this page</h1>
@@ -71,7 +74,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" >
+            <img class="third-slide" src="./images/foret.jpg" style="width: 100%; height: auto;">
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>If you need help ?</h1> 
@@ -97,40 +100,17 @@
 
       <div id="ToMiddle" class="container marketing">
 
-        <!-- Three columns of text below the carousel -->
-        <div class="row">
-          <div class="col-lg-4">
-            <img class="rounded-circle"  alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle"  alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle"  alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
-
-
         <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider">
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Create an excursion <span class="text-muted">Visit places around the world</span></h2>
+            <p class="lead"> Create an excursion. You and a group a children will enjoy using our app.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+              <img class="featurette-image img-fluid mx-auto" src="./images/car_sharing.jpg" alt="Car Sharing">
           </div>
         </div>
 
@@ -138,27 +118,13 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Add your children to a car, or be the driver <span class="text-muted">Collaborativity is the key of traveling.</span></h2>
+            <p class="lead">Once an excursion have been created, you'll be able to add your children for the trip, or decide to share your car</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="./images/children.jpg" alt="Generic placeholder image">
           </div>
         </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
 
         <!-- /END THE FEATURETTES -->
 
@@ -166,21 +132,14 @@
 
 		
       <!-- FOOTER -->
-      <footer id="ToBottom" class="container">
-            <div class="row">
+      <footer id="ToBottom" class="container" style="padding-top: 50px;">
+            <div class="row test" >
                 <div id="contact" class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4>
+                    <h4 class="test">
                         <strong>Car Sharing</strong>
                     </h4>
-                        <p>25, rue Docteur Rémy Annino
-                        <br />Saint-Etienne, 42000</p>
+                        <p>Université Jean-Monnet</p>
                     <ul class="list-unstyled">
-                        <li>
-                            (+33) 4 77 91 57 15
-                        </li>
-                        <li>
-                            (+33) 4 77 91 58 99
-                        </li>
                         <li>
                             <a href="https://www.univ-st-etienne.fr/" target="_blank">UJM Website</a>
                         </li>
