--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,18 +39,18 @@
 	<div class="container marketing">
 		<br/>
 		<form th:action="@{/login}" method="POST" class="form-signin">
-			<h3 class="form-signin-heading" th:text="Welcome"></h3>
+			<h3 class="form-signin-heading" th:text="Welcome" style="text-align: center;"></h3>
 			<br/>
 			 
 			<input type="text" name="username"  th:placeholder="Username..."
-				class="form-control" required="required"/> <br/> 
+				class="form-control" required="required" style="max-width: 500px; margin: auto;"/> <br/> 
 			<input type="password"  th:placeholder="Password..."
-				id="password" name="password" class="form-control" required="required"/> <br /> 
+				id="password" name="password" class="form-control" required="required" style="max-width: 500px; margin: auto;"/> <br /> 
 				
 			<div align="center" th:if="${param.error}">
 				<p style="font-size: 20; color: #FF1C19;">Login or Password invalid, please verify</p>
 			</div>
-			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Sign in</button>
+			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit" style="max-width: 250px; margin: auto;">Sign in</button>
 		</form>
 	</div>
 </body>
