--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -41,32 +41,32 @@
 		<form autocomplete="off" action="#" th:action="@{/registration}"
 					th:object="${user}" method="post" class="form-horizontal"
 					role="form">
-			<h3 class="form-signin-heading" th:text="Registration"></h3>
+			<h3 class="form-signin-heading" th:text="Registration" style="text-align: center;"></h3>
 			<br/>
 			 
 			 				<input type="text" th:field="*{firstname}"
-								placeholder="Firstname..." class="form-control" required="required" maxlength="32"/> 
+								placeholder="Firstname..." class="form-control" required="required" maxlength="32" style="max-width: 500px; margin: auto;"/> 
 										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"
 								class="validation-message"></label> <br/> 
 								<input type="text" th:field="*{lastname}"
-								placeholder="Lastname..." class="form-control" required="required" maxlength="32"/> 
+								placeholder="Lastname..." class="form-control" required="required" maxlength="32" style="max-width: 500px; margin: auto;"/> 
 										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"
 								class="validation-message"></label> <br/> 
 							<input type="text" th:field="*{username}"
-								placeholder="Username..." class="form-control" required="required" maxlength="32"/> 
+								placeholder="Username..." class="form-control" required="required" maxlength="32" style="max-width: 500px; margin: auto;"/> 
 										<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
 								class="validation-message"></label> <br/> 
 			<input type="password" th:field="*{password}"
-  								placeholder="Password..." class="form-control" required="required" /> 
+  								placeholder="Password..." class="form-control" required="required" style="max-width: 500px; margin: auto;"/> 
   								<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 							class="validation-message" ></label> 
 				<br />
 				<input type="password" th:field="*{passwordConfirm}"
- 								placeholder="Confirm your password..." class="form-control" required="required" />
+ 								placeholder="Confirm your password..." class="form-control" required="required" style="max-width: 500px; margin: auto;"/>
 			<label style="font-size: 20; color: #FF1C19;" th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}"
 							class="validation-message" ></label> 
 				<br />
-			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Sign up</button>
+			<button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit" style="max-width: 250px; margin: auto;">Sign up</button>
 			<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
 		</form>
 	</div>
