--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -17,48 +17,47 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<form autocomplete="off" action="#" th:action="@{'/reserve/' + ${idExcursion} + '/' + ${id}}" th:object="${theReserve}" method="post"
-												class="form-horizontal" role="form">
-												<h3 class="form-signin-heading" th:text="Reserve"></h3>
-												<br /> <label> Nombres de places : <span class="label label-default" th:text="${numberPlaces}"></span>
-												</label> <br /> <label> Nombres de places reserves : <span class="label label-default"
-																th:text="${placesReserved}"></span>
-												</label> <br /> <label> Nombres de places disponibles : <span class="label label-default"
-																th:text="${numberPlacesDispo}"></span>
-																<input id="numberPlacesDispo" type="hidden" th:value="${numberPlacesDispo}" onchange="verifierZero();"/>
-												</label> <br /> <input id="parentTable" type="hidden" th:value="${parent}"/>
-																 <label>Presence parent : <select id="presenceParent"  th:field="*{presenceParent}" required="required" onchange="changeSelect();">
-																<option value="" selected="selected"></option>
-																<option value="1">Oui</option>
-																<option value="0">Deja present</option> 
-																<option value="0">Non</option>
-												</select> </label> <br />
-												
-												Choissisez vos enfants qui participent à ce trajet:<SELECT multiple onchange="changeSelect();"
-																id="childs"  th:field="*{childs}" name="gr">
-																<OPTION th:each="child : ${childs}" th:value="${child.id}" th:inline="text">[[${child.name}]]</OPTION>
-												</SELECT><br /> <br />
-												<button id="boutton" class="btn btn-lg btn-success btn-block" name="Submit" type="Submit">Reserved</button>
-												<span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
-								</form>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                                                <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                                                <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container marketing">
+        <form autocomplete="off" action="#" th:action="@{'/reserve/' + ${idExcursion} + '/' + ${id}}" th:object="${theReserve}" method="post"
+            class="form-horizontal form-group" role="form" >
+            <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Reserve</h1>
+            <br /> <label> Nombres de places : <span class="label label-default" th:text="${numberPlaces}"></span>
+            </label> <br /> <label> Nombres de places reserves : <span class="label label-default"
+                                            th:text="${placesReserved}"></span>
+            </label> <br /> <label> Nombres de places disponibles : <span class="label label-default"
+                                            th:text="${numberPlacesDispo}"></span>
+                                            <input id="numberPlacesDispo" type="hidden" th:value="${numberPlacesDispo}" onchange="verifierZero();"/>
+            </label> <br /> <input id="parentTable" type="hidden" th:value="${parent}"/>
+                                             <label>Presence parent : <select class="form-control" id="presenceParent"  th:field="*{presenceParent}" required="required" onchange="changeSelect();">
+                                            <option value="" selected="selected">Choose</option>
+                                            <option value="1">Oui</option>
+                                            <option value="0">Deja present</option> 
+                                            <option value="0">Non</option>
+            </select> </label> <br />
 
-				</div>
+            Choissisez vos enfants qui participent à ce trajet:<SELECT multiple onchange="changeSelect();"
+                                            id="childs"  th:field="*{childs}" name="gr">
+                                            <OPTION th:each="child : ${childs}" th:value="${child.id}" th:inline="text">[[${child.name}]]</OPTION>
+            </SELECT><br /> <br />
+            <button id="boutton" class="btn btn-lg btn-success btn-block" style="max-width: 250px; margin: auto;" name="Submit" type="Submit">Reserve</button>
+            <span style="font-size: 20; color: #9FE855;" th:utext="${successMessage}"></span>
+        </form>
+    </div>
 
 
 </body>
