--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -14,61 +14,60 @@
 </head>
 
 <body>
-				<header>
-								<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-												<a class="navbar-brand" th:href="@{/}">Home</a>
-												<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-																aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-																<span class="navbar-toggler-icon"></span>
-												</button>
-												<div class="collapse navbar-collapse" id="navbarCollapse">
-																<ul class="navbar-nav mr-auto">
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
-																				<li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
-																</ul>
-												</div>
-								</nav>
-				</header>
-				<div class="container marketing">
-								<table id="search" class="table table-hover">
-
-												<thead>
-
-																<tr>
-																				<th>Date</th>
-																				<th>Numbers of Places</th>
-																				<th>Places Reserved</th>
-																				<th>Places Restantes</th>
-																				<th>Reserver</th>
-																				<th>Supprimer</th>
-
-																</tr>
-												</thead>
-												<tbody>
-																<tr th:each="trip : ${listTrip}" id="tabCount" th:inline="text">
-																				<td th:text="${trip.dateDepart}"></td>
-																				<td th:text="${trip.numberPlaces}"></td>
-																				<td th:text="${trip.placesReserved}"></td>
-																				<td th:text="${trip.numberPlaces}-${trip.placesReserved}"></td>
-																				<!-- th:block rather than unneeded div -->
-																				<th:block th:switch="${trip.numberPlaces}-${trip.placesReserved}">
-																								<td th:case="0">
-																												<img class="img-circle" src="/images/stop.jpg" style="height: 25%; width: 15%;">
-																								</td>
-																								<td th:case="*">
-																												<a type="button" class="btn btn-success" th:href="@{'/reserve/' + ${id} + '/' + ${trip.id}}">Réserver</a>
-																								</td>					
-																				</th:block>
-																				
-																				<td><a type="button" class="btn btn-danger" th:href="@{'/delete/' + ${trip.id}}">Supprimer</a></td>
-																</tr>
-												</tbody>
-								</table>
-								<p align="center">
-												<a type="button" class="btn btn-primary" th:href="@{'/trips/createTrips/' + ${id}}">Create Trip</a>
-								</p>
-				</div>
-
-
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" th:href="@{/}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToMiddle}">Description</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/index#ToBottom}">Help</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+        <div class="container marketing">
+            <h1 style="text-align: center; padding-top: 50px; padding-bottom: 20px;">Existings Trips</h1>
+            <div class="table-responsive">
+                <table id="search" class="table table-hover table-striped table-sm">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Numbers of Places</th>
+                            <th>Places Reserved</th>
+                            <th>Places Restantes</th>
+                            <th>Reserver</th>
+                            <th>Supprimer</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="trip : ${listTrip}" id="tabCount" th:inline="text">
+                            <td th:text="${trip.dateDepart}"></td>
+                            <td th:text="${trip.numberPlaces}"></td>
+                            <td th:text="${trip.placesReserved}"></td>
+                            <td th:text="${trip.numberPlaces}-${trip.placesReserved}"></td>
+                            <!-- th:block rather than unneeded div -->
+                            <th:block th:switch="${trip.numberPlaces}-${trip.placesReserved}">
+                                <td th:case="0">
+                                                                <img class="img-circle" src="/images/stop.jpg" style="height: 25%; width: 15%;">
+                                </td>
+                                <td th:case="*">
+                                                                <a type="button" class="btn btn-success" th:href="@{'/reserve/' + ${id} + '/' + ${trip.id}}">Réserver</a>
+                                </td>					
+                            </th:block>
+                            <td>
+                                <a type="button" class="btn btn-danger" th:href="@{'/delete/' + ${trip.id}}">Supprimer</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <p align="center">
+                <a type="button" class="btn btn-primary" th:href="@{'/trips/createTrips/' + ${id}}" style="margin-top: 20px;">Create Trip</a>
+            </p>
+        </div>
 </body>
 </html>
